[workspace]

members = [
    "contain-rs",
    "contain-rs-core",
    "contain-rs-macro",
    "contain-rs-parser",
    "images/contain-rs-postgres",
    "images/contain-rs-nginx",
    "images/contain-rs-surrealdb",
]

[workspace.dependencies]
rand = "0.8"
log = "0.4"
regex = "1.5"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
reqwest = "0.11"
rstest = "0.16"
test-log = "0.2"
env_logger = "0.10"
tracing = "0.1"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
