[workspace]

members = [
    "contain-rs",
    "contain-rs-core",
    "contain-rs-macro",
    "contain-rs-parser",
    "images/contain-rs-postgres",
    "images/contain-rs-nginx",
    "images/contain-rs-surrealdb",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
rand = "0.8"
regex = "1.7"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
reqwest = "0.11"
rstest = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
os_pipe = "1.1"

contain-rs = { version = "0.2.0-alpha.7", path = "contain-rs" }
contain-rs-core = { version = "0.2.0-alpha.7", path = "contain-rs-core" }
contain-rs-parser = { version = "0.2.0-alpha.7", path = "contain-rs-parser" }
contain-rs-macro = { version = "0.2.0-alpha.7", path = "contain-rs-macro" }
contain-rs-nginx = { version = "0.2.0-alpha.7", path = "images/contain-rs-nginx" }
contain-rs-postgres = { version = "0.2.0-alpha.7", path= "images/contain-rs-postgres" }
contain-rs-surrealdb = { version = "0.2.0-alpha.7", path = "images/contain-rs-surrealdb" }

[workpsace.metadata.workspaces]
no_individual_tags = true
