[package]
name = "contain-rs-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Run containers with podman (or docker)"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
readme = "README.md"
categories = ["development-tools::testing"]

[dependencies]
rand = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
rstest = { workspace = true }
