[package]
name = "contain-rs-core"
version = "0.2.0-alpha.3"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[dependencies]
rand = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
os_pipe = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
rstest = { workspace = true }
