[package]
name = "contain-rs-macro"
version = "0.2.0-alpha.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
contain-rs-parser = { path = "../contain-rs-parser", version = "0.2.0-alpha.0" }
contain-rs-core = { path = "../contain-rs-core", version = "0.2.0-alpha.0" }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
