[package]
name = "contain-rs-macro"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

contain-rs-parser = { workspace = true }
contain-rs-core = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
