[package]
name = "contain-rs-parser"
version = "0.2.0-alpha.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
contain-rs-core = { path = "../contain-rs-core", version = "0.2.0-alpha.0" }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
regex = { workspace = true }
