[package]
name = "contain-rs-parser"
version = "0.2.0-alpha.6"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
regex = { workspace = true }

contain-rs-core = { workspace = true }
