[package]
name = "contain-rs"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
description = "contain-rs image macro"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
readme = "README.md"
categories = ["development-tools::testing"]

[features]
macros = []

[dependencies]
contain-rs-core = { path = "../contain-rs-core" }
contain-rs-macro = { path = "../contain-rs-macro" }
