[package]
name = "contain-rs"
version = "0.2.0-alpha.1"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[features]
macros = []

[dependencies]
contain-rs-core = { path = "../contain-rs-core", version = "0.2.0-alpha.0" }
contain-rs-macro = { path = "../contain-rs-macro", version = "0.2.0-alpha.0" }
