[package]
name = "contain-rs"
version = "0.2.1"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[features]
macros = ["dep:contain-rs-macro"]

[dependencies]
contain-rs-core = { workspace = true }
contain-rs-macro = { workspace = true, optional = true }
