[package]
name = "contain-rs-nginx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contain-rs-rt = { path = "../../contain-rs-rt" }
contain-rs-macro = { path = "../../contain-rs-macro" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
