[package]
name = "contain-rs-postgres"
version = "0.2.0-alpha.3"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[dependencies]
contain-rs = { path = "../../contain-rs", features = ["macros"], version = "0.2.0-alpha.0" }
