[package]
name = "contain-rs-postgres"
version = "0.2.2"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[dependencies]
contain-rs = { workspace = true, features = ["macros"] }
