[package]
name = "contain-rs-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contain-rs-rt = { path = "../../contain-rs-rt" }
contain-rs-macro = { path = "../../contain-rs-macro" }

[dev-dependencies]
reqwest = { version = "0.11" }
log = "0.4"
pretty_env_logger = "0.4"
