[package]
name = "contain-rs-surrealdb"
version = "0.2.0-alpha.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
contain-rs = { path = "../../contain-rs", features = ["macros"], version = "0.2.0-alpha.0" }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
tracing-subscriber = { workspace = true }
