[package]
name = "contain-rs-surrealdb"
version = "0.2.0-alpha.6"
edition = { workspace = true }
license = { workspace = true }
description = "Run containers with docker or podman"
repository = "https://github.com/reenigneEsrever92/contain-rs"
documentation = "https://docs.rs/contain-rs"
categories = ["development-tools::testing"]

[dependencies]
contain-rs = { path = "../../contain-rs", features = ["macros"], version = "0.2.0-alpha.0" }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
tracing-subscriber = { workspace = true }
